New pages, about and terms

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* tailwind.css */
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  #app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  main {
+    flex: 1;
+  }
+  
